--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,72 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      Player
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+<ion-content class="ion-padding">
+
+  <ion-list class="bg-transparent">
+
+    <!-- <ion-list-header>Playlist</ion-list-header> -->
+    
+    <ng-container *ngFor="let file of files; let i = index">
+      <ion-item class="ion-text-wrap" (click)="openFile(file, i)" class="pu-section-list-item pu-my-plans-item">
+        <ion-icon color="primary" item-start name="musical-note" color="dark" style="zoom:0.7;"></ion-icon>
+        <p *ngIf="currentFile.index === i" style="font-weight: bold;color: black">{{ file.name }}</p>
+        <p *ngIf="currentFile.index !== i">{{ file.name }}</p>
+        <!-- <p item-end *ngIf="currentFile.index === i">SELECTED</p> -->
+        <!--<ion-icon item-end name="play" *ngIf="currentFile.index === i" style="zoom:0.9;"></ion-icon> -->
+      </ion-item>
+    </ng-container>
+  </ion-list>
+
 </ion-content>
+
+
+<ion-footer>
+
+  <ion-toolbar class="ctrl_toolbar">
+    <p>{{ file_name }}</p>
+      <!-- <ion-range min="0" max="{{duration}}" [(ngModel)]="position" debounce="500" (ionBlur)="onSliderChanged()">     -->
+      <ion-range id="myRange" min="0" [max]="state?.duration" [value]="state?.currentTime" debounce="230" (touchend)="onSliderChangeEnd($event)" color="dark">  <!--  ionChange  -->
+      	<!--  [disabled]="is_in_play && is_playing"  -->
+        <ion-label slot="start">{{ state?.readableCurrentTime }}</ion-label>
+        <!-- <ion-label slot="end" *ngIf="duration == -1" >--:--</ion-label> -->
+        <ion-label slot="end"> {{ state?.readableDuration }} </ion-label>
+
+      </ion-range>
+<!--     <ion-grid>
+      <ion-row align-items-center id="media-controls">
+ -->
+
+<!--         <button clear ion-col ion-button [disabled]="isFirstPlaying()" (click)="previous()">
+          <ion-icon color="light" name="skip-backward"> </ion-icon>
+        </button>
+ -->    
+<ion-grid>  
+    <ion-row>  
+      <ion-col size="5"></ion-col>  
+      <ion-col size="3">
+ 		<button class="bg_button" fill="clear" ion-col ion-button *ngIf="!state?.playing" (click)="play()">
+          <ion-icon color="dark" name="play"></ion-icon>
+        </button>
+        <button class="bg_button" fill="clear" ion-col ion-button *ngIf="state?.playing" (click)="pause()">
+          <ion-icon color="dark" name="pause"></ion-icon>
+        </button>
+    </ion-col>
+      <ion-col size="5"></ion-col>  
+    </ion-row>  
+</ion-grid>
+<!--          <button clear ion-col ion-button [disabled]="isLastPlaying()" (click)="next()">
+          <ion-icon color="light" name="skip-forward"></ion-icon>
+        </button>
+ -->
+
+ <!--       </ion-row>
+    </ion-grid>
+ -->
+  </ion-toolbar>
+</ion-footer>
